<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:text="@string/user_welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userWelcomeHeader" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:onClick="exit"
        android:layout_marginBottom="25dp"
        android:id="@+id/userLogoutButton" />

    <!-- Display Question -->

    <TextView
        android:text="@string/user_default_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userQuestion" />

    <!-- Display Time -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <TextView
        android:text="@string/user_time_remaining_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userTimeRemainingLabel" />

    <TextView
        android:text="@string/user_default_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userTime" />

    <!-- Display Answers -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <RadioGroup
        android:id="@+id/answerRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_answer"
            android:onClick="answerQuestion"/>

        <RadioButton android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_answer"
            android:onClick="answerQuestion"/>

        <RadioButton android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_answer"
            android:onClick="answerQuestion"/>

        <RadioButton android:id="@+id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_answer"
            android:onClick="answerQuestion"/>

    </RadioGroup>

    <!-- Continue Quiz -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:onClick="loadQuizTakerFromView"
        android:id="@+id/continueButton" />

    <!-- Display Score -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <TextView
        android:text="@string/user_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userScoreLabel" />

    <TextView
        android:text="@string/user_default_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userScore" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000"/>

    <TextView
        android:text="@string/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username" />

</LinearLayout>
