<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:text="@string/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:id="@+id/welcomeHeader" />

    <TextView
        android:text="@string/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/username" />

    <TextView android:text="@string/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:onClick="login"/>

</LinearLayout>
