<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/adminWelcomeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_welcome_header" />

        <Button
            android:id="@+id/adminLogoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exit"
            android:text="@string/logout_button" />

        <!-- Add a question -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/addQuestionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question_header" />

        <TextView
            android:id="@+id/addQuestionTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question_title_label" />

        <EditText
            android:id="@+id/addQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/addQuestionCorrectAnswerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question_correct_answer_label" />

        <EditText
            android:id="@+id/addQuestionCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/addQuestionIncorrectAnswer1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question_incorrect_answer_label" />

        <EditText
            android:id="@+id/addQuestionIncorrectAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/addQuestionIncorrectAnswer2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question_incorrect_answer_label" />

        <EditText
            android:id="@+id/addQuestionIncorrectAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/addQuestionIncorrectAnswer3Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question_incorrect_answer_label" />

        <EditText
            android:id="@+id/addQuestionIncorrectAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/addQuestionTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question_time_label" />

        <EditText
            android:id="@+id/addQuestionTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/createQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addQuestion"
            android:text="@string/create_question_button" />

        <!-- Delete a question -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/deleteQuestionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_question_header" />

        <EditText
            android:id="@+id/questionToDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/deleteQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteQuestion"
            android:text="@string/delete_question_button" />

        <!-- Create a new user -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/createUserHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user_header" />

        <TextView
            android:id="@+id/createUserUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_label" />

        <EditText
            android:id="@+id/createUserUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/createUserPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/createUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addUser"
            android:text="@string/create_user_button" />

        <!-- Delete a user -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/deleteUserHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_user_header" />

        <EditText
            android:id="@+id/usernameToDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/deleteUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteUser"
            android:text="@string/delete_user_button" />

        <!-- Clear user's stats -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/clearUserHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_user_header" />

        <EditText
            android:id="@+id/usernameToClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/clearUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearUserStats"
            android:text="@string/clear_user_button" />

        <!-- View saved stats/users/questions in that order -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/viewUsersHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_users_header" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ListView
                android:id="@+id/userListView"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_centerHorizontal="true"
                android:transcriptMode="disabled"
                android:scrollbars="vertical"
                android:layout_centerVertical="true"></ListView>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/viewQuestionsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_questions_header" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ListView
                android:id="@+id/questionListView"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_centerHorizontal="true"
                android:transcriptMode="disabled"
                android:scrollbars="vertical"
                android:layout_centerVertical="true"></ListView>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/viewStatsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_stats_header" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ListView
                android:id="@+id/statListView"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_centerHorizontal="true"
                android:transcriptMode="disabled"
                android:scrollbars="vertical"
                android:layout_centerVertical="true"></ListView>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>